<resources>
    <string name="app_name">ComePet</string>
    <string name="api_key">AIzaSyC4FeUXCDHBa4TXiSWHy1qwtwzyTQ_6so0</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="register_title">Register</string>
    <string name="username_input_text">Username</string>
    <string name="icon_description">icon</string>
    <string name="email_input_text">Email Address</string>
    <string name="password_input_text">Password</string>
    <string name="name_input_text">Name</string>
    <string name="confirm_password_input_text">Confirm Password</string>
    <string name="register_account_text">Sign Up</string>
    <string name="title_register">Register</string>
    <string name="or">or</string>
    <string name="login_account_text">Login</string>
    <string name="login_title">Login</string>
    <string name="title_login">login</string>
    <string name="boarding_question">Are you willing to be a pet boarding facility?</string>
    <string name="personal_purpose">No, I only use it for personal purposes</string>
    <string name="seller_purpose">Yes, I am willing to be a pet \nboarding facility.</string>
    <string name="title_boarding">boarding</string>
    <string name="title_post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_post">New Post</string>
    <string name="next">Next</string>
    <string name="capture">capture</string>
    <string name="title_welcome">Welcome user</string>
    <string name="logout_text">Log out</string>
    <string name="title_profile">Profile</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="tag_pet">Tag Pet</string>
    <string name="post_feeds">Post Feeds</string>
    <string name="post_shelter">Post Shelter</string>
    <string name="add_location">Add Location</string>
    <string name="search">Search...</string>
    <string name="university">Universitas Multimedia Nusantara</string>
    <string name="address">Scientia Boulevard, Gading Serpong, Kab. Tangerang, Banten</string>
    <string name="mountain">Bromo Tengger Semeru National Park</string>
    <string name="address1">Cemoro Lawang, Desa Ngadisari, Kec. Sukapura, Kabupaten Probolinggo, Jawa Timur</string>
    <string name="mountain1">Mountain Ciremai</string>
    <string name="address2">LinggarJati, Kab. Kuningan, Jawa Barat</string>
    <string name="lousi">Lousi</string>
    <string name="persia">Persia</string>
    <string name="gallery">Gallery</string>
    <string name="capture_image">Capture Image</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="schedule">Schedule</string>

    <!-- Ini Punya Jose buat profile :>-->
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="title_setting">Setting\n</string>
    <string name="add_pet">Add Pet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting_title">Settings</string>
    <string name="forgot_password_text">forgot password?</string>
    <string name="title_forgot">forgot password</string>
    <string name="forgot_password_text2">Forgot Password?</string>
    <string name="forgot_password_desc">Don\'t worry! Please enter the address associated with your account</string>
    <string name="send_button_text">Send</string>
    <string name="verified_email">verified email</string>
    <string name="resend_verifEmail_button">Resend</string>
    <string name="password_title">Password</string>
    <string name="update_password">Update your password</string>
    <string name="update_password_description">Please enter your existing password and your new password.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="update_email">Update your email</string>
    <string name="update_email_description">Please enter your existing email address and your new email address</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="email_title">Email Address</string>
    <string name="change_acc_status">Personal Account?</string>
    <string name="location_name">Location Name</string>
    <string name="location_address">Location Address</string>
    <string name="google_maps_key">AIzaSyClBxyjJR18Ur2fyMR9SJSVxvQsVIhqby4</string>
    <string name="input_location">Input your location</string>
</resources>