<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_post">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.comepet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.comepet.ui.auth.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/navigation_register_to_navigation_boarding"
            app:destination="@id/navigation_boarding"/>
        <action
            android:id="@+id/navigation_register_to_navigation_login"
            app:destination="@id/navigation_login"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.comepet.ui.auth.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/navigation_login_to_navigation_register"
            app:destination="@id/navigation_register"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_boarding"
        android:name="com.example.comepet.ui.boarding.BoardingFragment"
        android:label="@string/title_boarding"
        tools:layout="@layout/fragment_boarding"/>

    <!--    ini tempat post     -->
    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.comepet.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post">

        <action
            android:id="@+id/navigation_post_to_navigation_camera"
            app:destination="@id/navigation_camera"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.comepet.ui.post.camera.CameraFragment"
        android:label="Camera"
        tools:layout="@layout/fragment_camera"/>
</navigation>