<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_beige"
    android:paddingTop="40dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.subfragments.ChangeEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/email_title"
            android:textAlignment="center"
            android:textColor="@color/dark_blue_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@null"
            android:src="@drawable/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_email"
        android:textSize="20sp"
        android:textColor="@color/dark_blue_gray"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_email_description"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat_regular"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_email"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/dark_blue_gray"
        android:layout_marginBottom="5dp"
        android:textSize="12sp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/currentEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:background="@drawable/auth_input_style"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_email"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/dark_blue_gray"
        android:layout_marginBottom="5dp"
        android:textSize="12sp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="30dp"
        android:background="@drawable/auth_input_style"/>
    <Button
        android:id="@+id/changeEmailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:background="@drawable/background_blue"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:letterSpacing="0.05"/>

</LinearLayout>