<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_beige"
    android:paddingTop="40dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.auth.login.forgot_password.ForgotFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:src="@drawable/back_green"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/forgot_password"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text2"
            android:textSize="28sp"
            android:textColor="@color/dark_blue_gray"
            android:fontFamily="@font/merriweather_bold"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/dark_blue_gray"
            android:text="@string/forgot_password_desc"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:hint="@string/email_input_text"
                android:textColorHint="@color/dark_blue_gray"
                android:textColor="@color/dark_blue_gray"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_blue"
            android:text="@string/send_button_text"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</FrameLayout>